2008-10-17 Frank Naegler  <typo3@naegler.net>

	* added check of restricted groups (grouptype = 4) in listgroups application

2008-10-16 Frank Naegler  <typo3@naegler.net>

	* added check if resource is added before add it twice in tx_community_AccessManager->addResource()
	* added implements tx_community_acl_AclResource to tx_community_controller_AbstractCommunityApplication and its needed methods 
	* added listType to the listGroups application
	* added ZodiacSign ViewHelper
	* added getCrdate() and setCrdate to User model and gateway
	* added getCity() to User model
	* added Age ViewHelper
	* added new param to Link View Helper for custom ATagParams
	* localize label of UserProfileActionWidget
	* localize label of MyGroupsWidget

2008-10-08 Ingo Renner  <ingo@typo3.org>

	* changed the widget view helper to require the real names of application and widget
	* added a method in the template engine so that view helpers get variables handed over to them if needed
	* added a thumbnail action to the group profile's image widget
	* added a thumbnail action to the user profile's image widget
	* the widget view helper can now hand over an arbitrary number of arguments to a widget
	* added custom size image actions o the user and group profile image widgets
	* fixed handling of user images, if the user has no image, a default image is used now
	* set default images for the group and user profile image widgets
	* added an invite application

2008-10-07 Frank Naegler  <typo3@naegler.net>

	* localize onlineFriendsWidget and added error message, if no friend is online
	* added interfaces and hooks for the ProfileActions-Widgets

2008-10-07 Ingo Renner  <ingo@typo3.org>

	* added a method to the user gateway to find a user's online friends
	* added caching of already retrieved users to the user gateway
	* added a "who of my friends is online" widget
	* fixed the interfaces for additional user/group profile actions, added documentation